results/SpecGenBench/conversational/log-MinInArray-2023_11_28_20_09_25.txt
class MinInArray {
    //@ ensures arr.length == 0 ==> \result == -1;
    //@ ensures (\forall int i; 0 <= i && i < arr.length; \result <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
        //@ maintaining 0 <= i && i <= arr.length;
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}
/home/max/Documents/JMLGPT/tmp/MinInArray.java:7: error: variable i is already defined in method minElementInArray(int[])
        //@ maintaining (\forall int i; 0 <= i && i < arr.length; res <= arr[i]);
                                     ^
1 error

class MinInArray {
    //@ requires arr != null;
    //@ ensures arr.length == 0 ==> \result == -1;
    //@ ensures (\forall int i; 0 <= i && i < arr.length; \result <= arr[i]);
    public int minElementInArray(int[] arr) {
        if (arr.length == 0) return -1;
        int res = Integer.MIN_VALUE;
        //@ maintaining (\forall int j; 0 <= j && j < i; res <= arr[j]);
        //@ maintaining 0 <= i && i <= arr.length;
        //@ decreases arr.length - i;
        for(int i = 0; i < arr.length; i++) {
            res = ((arr[i] < res) ? arr[i] : res);
        }
        return res;
    }
}

